--- a/src/modules/waybar/style.css
+++ b/src/modules/waybar/style.css
@@ -145,21 +145,30 @@ window#waybar {
 }
 
 #taskbar {
-    border-radius: 0px 8px 8px 0;
-    padding: 0 3px;
-    margin: 0 0px;
+    border-radius: 100px;
+    padding: 8px;
+    padding-left: 0px;
     color: #ffffff;
-    background-color: rgba(120, 118, 117, 0.3);
+    background-color: #303030;
+    font-size: 0px;
 }
 
 #taskbar button {
-    border-radius: 3px 3px 3px 3px;
-    padding: 0 0 0 3px;
-    margin: 3px 1;
+    border-radius: 0px;
+    margin-left: 8px;
+    padding: 0px;
     color: #ffffff;
-    background-color: rgba(120, 118, 117, 0.1);
+    background-color: transparent;
+    font-size: 0px;
+    min-height: 0px;
+}
+
+#taskbar button:hover {
+    background-color: transparent;
+    box-shadow: inherit;
 }
 
 #taskbar button.active {
-    background-color: rgba(120, 118, 117, 0.8);
+    /* background-color: orange; */
+    border-bottom: 1px solid orange;
 }
